--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,12 +1,12 @@
 framework:
-    default_locale: en
+    default_locale: fr
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
-            - en
+            - fr
 #        providers:
 #            crowdin:
-#                dsn: '%env(CROWDIN_DSN)%'
+#                dsn: '%env(CxROWDIN_DSN)%'
 #            loco:
 #                dsn: '%env(LOCO_DSN)%'
 #            lokalise:
